--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<h1></h1> * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
-
+<h1>App Angular desplegada con CI/CD</h1>
+<p>Version 1</p>
 
 <router-outlet />
